--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:1.1.0'
-    classpath 'com.github.dcendents:android-maven-plugin:1.2'
 
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
@@ -15,6 +14,11 @@ buildscript {
 
 allprojects {
   repositories {
-    jcenter()
+    mavenCentral()
+    mavenLocal()
   }
+}
+
+def isReleaseBuild() {
+  return version.contains("SNAPSHOT") == false
 }
